Demoproject/force-app/main/default/objects/Account/fields/Acc_Name__c.field-meta.xml
<CustomField>
    <fullName>Acc_Name__c</fullName>
    <label>Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>