Demoproject/force-app/main/default/objects/Account/fields/Acnt_Address__c.field-meta.xml
<CustomField>
    <fullName>Acnt_Address__c</fullName>
    <label>Acnt Address</label>
    <length>125</length>
    <type>Text</type>
</CustomField>