Demoproject/force-app/main/default/objects/Account/fields/Acnt_Email__c.field-meta.xml
<CustomField>
    <fullName>Acnt_Email__c</fullName>
    <label>Acnt Email</label>
    <length>125</length>
    <type>Text</type>
</CustomField>