Demoproject/force-app/main/default/objects/Account/fields/Acnt_Number__c.field-meta.xml
<CustomField>
    <fullName>Acnt_Number__c</fullName>
    <label>Acnt Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>