Demoproject/force-app/main/default/objects/Account/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <label>Employee ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>