Demoproject/force-app/main/default/objects/Account/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>jpeg</fullName>
            </value>
            <value>
                <fullName>jpg</fullName>
            </value>
            <value>
                <fullName>pdf</fullName>
            </value>
            <value>
                <fullName>png</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>