Demoproject/force-app/main/default/objects/Account/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>10-50</fullName>
            </value>
            <value>
                <fullName>50-80</fullName>
            </value>
            <value>
                <fullName>80-110</fullName>
            </value>
            <value>
                <fullName>110-150</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>