Demoproject/force-app/main/default/objects/Account/fields/Testdate__c.field-meta.xml
<CustomField>
    <fullName>Testdate__c</fullName>
    <label>Testdate</label>
    <type>Date</type>
</CustomField>