Demoproject/force-app/main/default/objects/Account/validationRules/Website_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Website_VR</fullName>
    <active>false</active>
    <errorConditionFormula>if(REGEX(Website ,&quot;^((http|https)://)??(www[.])??([a-zA-Z0-9]|-)+?([.][a-zA-Z0-9(-|/|=|?)??]+?)+?$&quot;),false,true)</errorConditionFormula>
    <errorDisplayField>Website</errorDisplayField>
    <errorMessage>Enter a valid Website</errorMessage>
</ValidationRule>